# TigerOCaml

./: .envrc  .gitignore  NOTES.md  README.md  Symbol.ml  Symbol.mli  Syntax.ml  TODO.md  TigerC.ml  TigerError.ml  TigerTokens.ml  Tokens.ml  dune  dune-project  lexer.mll  parser.mly  tiger.tig
build_scripts/: data.ts  utils.ts
build_scripts/lexer/: gen_keywords.ts  gen_symbols.ts
build_scripts/parser/: generate.ts
scripts/: lexer.mll  run_all_tests.nu  run_dev.nu
scripts/lexer/: generate.ts
scripts/rules/: gen_escapes.ts  gen_keywords.ts  gen_symbols.ts  generate.ts
scripts/tokens/: gen_tokens.ts
src/: TigerC.ml  Utils.ml  dune
src/error/: TigerError.ml  dune
src/escape/: FindEscape.ml  FindEscape.mli  dune
src/lexer/: TigerTokens.ml  dune  lexer.mll
src/main/: Main.ml  Main.mli  dune
src/parser/: Parser.ml  Parser.mli  dune  parser.mly
src/semant/: Env.ml  Env.mli  Semant.ml  Semant.mli  Translated.ml  Types.ml  dune
src/semant/translate/: Frame.ml  Temp.ml  Temp.mli  Translate.ml  Translate.mli  dune
src/semant/translate/ir/: IRTree.ml  IRTree.mli  dune
src/symbol/: Symbol.ml  Symbol.mli  Syntax.ml  Table.ml  Table.mli  dune
test/: Utils.ml  dune  test_test.ml
test/escape/: FindEscapeTest.ml  dune
test/scripts/: README.md
test/scripts/translate/: break_inside_while.tig  conditional_and_if.tig  conditional_or_if.tig  let.tig  regular_if.tig
test/semant/: SemantTest.ml  dune
test/semant/translate/: TranslateE2ETest.ml  TranslateTest.ml  dune
