(executable
 (name TigerC)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord))
 (libraries menhirLib))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags -lg 1 -la 1 -lc 2 --explain --interpret-show-cst))

(rule
  (action
    (with-stdout-to unitActionsParser.mly
      (run menhir
        %{dep:parser.mly}
        --only-preprocess-u
))))

(menhir
  (modules unitActionsParser)
  (flags --table --external-tokens Parser)
)