(menhir
 (modules ParserYacc)
 (flags -lg 1 -la 1 -lc 2 --explain --interpret-show-cst))

(rule
 (action
  (with-stdout-to
   UnitActionsParser.mly
   (run menhir %{dep:ParserYacc.mly} --only-preprocess-u))))

(menhir
 (modules UnitActionsParser)
 (flags --table --external-tokens ParserYacc))

(library
 (name parserYacc)
 (modules ParserYacc)
 (libraries syntax tigerTokens tigerError))

(library
 (name unitActionsParser)
 (modules UnitActionsParser)
 (libraries parserYacc menhirLib))

(library
 (name parser)
 (modules Parser)
 (libraries unitActionsParser parserYacc lexer menhirLib core tigerError))
