(library
 (name semant)
 (modules Semant Env)
 (libraries types translated syntax tigerError utils translate temp)
 (preprocess
  (pps ppx_deriving.show)))

(library
 (name types)
 (modules Types)
 (libraries symbol)
 (preprocess
  (pps ppx_deriving.show)))

(library
 (name translated)
 (modules Translated)
 (libraries syntax types translate)
 (preprocess
  (pps ppx_deriving.show)))
